--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -6,13 +6,17 @@
     "@holochain/hc-redux-middleware": "^1.1.1",
     "@holochain/hc-web-client": "^0.5.0",
     "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
+    "@types/react-autosuggest": "^9.3.10",
     "@types/react-dom": "16.8.5",
     "@types/react-redux": "^7.1.2",
     "@types/storybook__react": "^4.0.2",
+    "autosuggest-highlight": "^3.1.1",
     "react": "^16.9.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
@@ -57,6 +61,7 @@
     "babel-loader": "^8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "redux-mock-store": "^1.5.3",
     "storybook-addon-specifications": "^2.1.3"
   }
 }
