--- a/ui-src/tsconfig.json
+++ b/ui-src/tsconfig.json
@@ -20,7 +20,5 @@
     "jsx": "react",
     "baseUrl": "node_modules"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*", "types/**/*"]
 }
