--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -25,7 +25,9 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "ui:start": "REACT_APP_PERSONAS_WEBSOCKET_INTERFACE='ws://localhost:5401' PORT=4001 react-scripts start",
+    "ui:start:agent1": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3401' PORT=4001 react-scripts start",
+    "ui:start:agent2": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3402' PORT=4002 react-scripts start",
+    "ui:start:agent3": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3403' PORT=4003 react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
