--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "ui:start:agent1": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3401' PORT=4001 react-scripts start",
+    "ui:start:agent1_1": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3403' PORT=4003 react-scripts start",
     "ui:start:agent2": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3402' PORT=4002 react-scripts start",
     "ui:start:agent3": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3403' PORT=4003 react-scripts start",
     "start": "react-scripts start",
